@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLPROXY_HTTP_1_0 (libcurl 7.19.4+).
+
         * Added CURLOPT_SOCKS5_GSSAPI_SERVICE and
           CURLOPT_SOCKS5_GSSAPI_NEC (libcurl 7.19.4+).
 
